Add beginning of section Langues

--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
 				</div>
 			</div>			
 		</section>
+
+		<section id="sectionLangues">
+
+			<img src="Images/langues.png" alt="langues">
+			
+		</section>
 	</div>
 	
 </body>
