Add some pictures and section "Langues", fixing bugs

--- a/index.html
+++ b/index.html
@@ -112,13 +112,16 @@
 			
 		</section>
 
+
+		<!--La seconde section affichera des informations sur mes études actuelles et passées ainsi que le moyen de se renseigner sur les établissements-->
+
 		<section id="sectionEtudes">
 
-			<img src="Images/etudes.png" alt="Etudes">
+			<img class="imageSections" img src="Images/IconesSections/Etudes.png" alt="Etudes">
 
-			<div id="contenuEtudes">
+			<div class="contenuSections">
 
-				<h2>Parcours scolaire</h2>
+				<h2 class="titreSections">Parcours scolaire</h2>
 
 				<div class="etudes">
 					<h3>Bachelier en Informatique et systèmes orientation réseaux et télécommunications option développement</h3>
@@ -142,7 +145,22 @@
 
 		<section id="sectionLangues">
 
-			<img src="Images/langues.png" alt="langues">
+			<img class="imageSections" src="Images/IconesSections/langues.png" alt="langues">
+
+			<div class="contenuSections">
+
+				<h2 class="titreSections">Connaissances linguistiques</h2>
+
+				<div class="langues">
+					
+					<div id="français">
+						<img src="Images/Langues/français.png" alt="Français">
+
+					</div>
+
+				</div>
+				
+			</div>
 			
 		</section>
 	</div>
