Add new languages, Languages section complete, box-shadow for sections

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 		<!--La seconde section affichera des informations sur mes études actuelles et passées ainsi que le moyen de se renseigner sur les établissements-->
 
-		<section id="sectionEtudes">
+		<section id="sectionEtudes" class="section">
 
 			<img class="imageSections" img src="Images/IconesSections/Etudes.png" alt="Etudes">
 
@@ -131,7 +131,7 @@
 
 				<div class="etudes">
 					<h3>Master en Sciences Informatiques</h3>
-					<h4>Université de Mons :<a href="http://portail.umons.ac.be/FR/Pages/default.aspx" title="Umons, Faculté des sciences" target="blanked"> Faculté des sciences</a></h4>
+					<h4>Université de Mons : <a href="http://portail.umons.ac.be/FR/Pages/default.aspx" title="Umons, Faculté des sciences" target="blanked">Faculté des sciences</a></h4>
 					<span>SEPTEMBRE 2014 - JUIN 2015</span> 			
 				</div>
 
@@ -143,25 +143,38 @@
 			</div>			
 		</section>
 
-		<section id="sectionLangues">
+		<!--La troisième section affichera des informations sur mes connaissances linguistiques actuelles-->
+
+		<section id="sectionLangues" class="section">
 
 			<img class="imageSections" src="Images/IconesSections/langues.png" alt="langues">
 
 			<div class="contenuSections">
-
 				<h2 class="titreSections">Connaissances linguistiques</h2>
 
-				<div class="langues">
-					
-					<div id="français">
+				<div class="langues">	
+					<div>
 						<img src="Images/Langues/français.png" alt="Français">
+						<h3>Français : </h3><p>Langue maternelle</p>
+					</div>
 
+					<div>
+						<img src="Images/Langues/anglais.png" alt="Anglais">
+						<h3>Anglais : </h3><p>Connaissance professionnelle</p>
+					</div>
+
+					<div>	
+						<img src="Images/Langues/italien.png" alt="Italien">
+						<h3>Italien : </h3><p>Connaissance professionnelle limitée</p>
+					</div>
+
+					<div>
+						<img src="Images/Langues/neerlandais.png" alt="Neerlandais">
+						<h3>Néerlandais : </h3><p>Notions de bases</p>
 					</div>
 
 				</div>
-				
-			</div>
-			
+
 		</section>
 	</div>
 	
