Add some improvement

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -89,9 +89,9 @@
 
 				<div class="logo"><img src="Images/IconesInfos/enveloppe.png" alt="Adresse Mail" title="Mail"></div>
 				<div id="mail">
-					<h4>florian.divrusa@std.heh.be</h4>
+					<h4><a href="mailto:florian.divrusa@std.heh.be">florian.divrusa@std.heh.be</a></h4>
 					<p>Adresse professionnelle</p>
-					<h4>floriandv1996@gmail.com</h4>
+					<h4><a href="mailto:floriandv1996@gmail.com">floriandv1996@gmail.com</a></h4>
 					<p>Adresse personnelle</p>
 				</div>
 				
@@ -117,7 +117,7 @@
 
 		<section id="sectionEtudes" class="section">
 
-			<img class="imageSections" img src="Images/IconesSections/Etudes.png" alt="Etudes">
+			<img class="imageSections" src="Images/IconesSections/Etudes.png" alt="Etudes">
 
 			<div class="contenuSections">
 
@@ -172,9 +172,9 @@
 						<img src="Images/Langues/neerlandais.png" alt="Neerlandais">
 						<h3>Néerlandais : </h3><p>Notions de bases</p>
 					</div>
-
 				</div>
 
+			</div>
 		</section>
 	</div>
 	
