Add beginning of section "Expérience professionelle" and some pictures

--- a/index.html
+++ b/index.html
@@ -176,6 +176,27 @@
 
 			</div>
 		</section>
+
+		<section id="sectionLangues" class="section">
+
+			<img class="imageSections" src="Images/IconesSections/experience.png" alt="experience">
+
+			<div class="contenuSections">
+				<h2 class="titreSections">Expérience professionnelle</h2>
+
+				<div class="experience">
+					<h3><a href="" title="">Shopping Cora La Louvière</a></h3>
+					<h4>Caissier et réassortiment rayon</h4>
+					
+					<span>Juillet - Septembre 2016</span>
+				</div>
+
+			</div>
+
+
+				
+		</section>
+
 	</div>
 	
 </body>
