Fix mistake in class name "sectionExperience"

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 			</div>
 		</section>
 
-		<section id="sectionLangues" class="section">
+		<section id="sectionExperience" class="section">
 
 			<img class="imageSections" src="Images/IconesSections/experience.png" alt="experience">
 
