--- a/index.html
+++ b/index.html
@@ -155,19 +155,19 @@
 
 				<h2 class="titreSections">Parcours scolaire</h2>
 
-				<div class="etudes">
+				<div class="etudesExp">
 					<h3>Bachelier en Informatique et systèmes orientation réseaux et télécommunications option développement</h3>
 					<h4>Haute école en Hainaut : <a href="https://www.heh.be/formation-4-8-Bachelier-en-Informatique-et-systemes-orientation-reseaux-et-telecommunications-option-developpement-ou-securite" title="Campus technique de la HEH" target="blanked">Campus technique</a></h4> 
 					<span>SEPTEMBRE 2015 - JUIN 2018 (Supposé)</span>
 				</div>
 
-				<div class="etudes">
+				<div class="etudesExp">
 					<h3>Master en Sciences Informatiques</h3>
 					<h4>Université de Mons : <a href="http://portail.umons.ac.be/FR/Pages/default.aspx" title="Umons, Faculté des sciences" target="blanked">Faculté des sciences</a></h4>
 					<span>SEPTEMBRE 2014 - JUIN 2015</span> 			
 				</div>
 
-				<div class="etudes" id="cess">
+				<div class="etudesExp" id="cess">
 					<h3>CESS :  Option Sciences - Math</h3>
 					<h4>Enseignement général : <a href="http://www.isj-lalouviere.be/home" title="Institut Saint-Jospeh La Louvière. Enseignement général" target="blanked">Institut Saint-Joseph La Louvière</a></h4>
 					<span>SEPTEMBRE 2008 - JUIN 2014</span>
@@ -186,7 +186,13 @@
 			<div class="contenuSections">
 
 				<h2 class="titreSections">Expériences professionnelles</h2>
-				
+
+				<img class="imagesPro" src="Images/IconesPro/Cora.png" alt="Cora" title="Shopping Cora">
+				<div id="cora" class="etudesExp">
+					<h3>Hôte de caisse, réassortiment rayons</h3>
+					<h4><a href="" title="">Shopping Cora : La Louvière</a></h4>
+					<span>JUILLET 2016 - SEPTEMBRE 2016 | JUILLET 2017 - SEPTEMBRE 2017</span>	
+				</div>
 			</div>
 
 		</section>
@@ -195,7 +201,7 @@
 
 		<section id="sectionLangues" class="section">
 
-			<img class="imageSections" src="Images/IconesSections/Langues.png" alt="langues">
+			<img class="imageSections" src="Images/IconesSections/langues.png" alt="Langues">
 
 			<div class="contenuSections">
 
