Add link to "shopping Cora"

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 				<img class="imagesPro" src="Images/IconesPro/Cora.png" alt="Cora" title="Shopping Cora">
 				<div id="cora" class="etudesExp">
 					<h3>Hôte de caisse, réassortiment rayons</h3>
-					<h4><a href="" title="">Shopping Cora : La Louvière</a></h4>
+					<h4><a href="http://lalouviere.shoppingcora.be/" title="Shopping Cora La Louvière" target="blanked">Shopping Cora : La Louvière</a></h4>
 					<span>JUILLET 2016 - SEPTEMBRE 2016 | JUILLET 2017 - SEPTEMBRE 2017</span>	
 				</div>
 			</div>
