Prepare for Javascript

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
 					<div id="photo">
 						<img src="Images/DiVrusa.JPG" alt="Di Vrusa Florian" title="Di Vrusa Florian">
+						
 					</div>
 
 					<div id="iconePresentation">
@@ -282,6 +283,13 @@
 			
 		</section>
 
+		<footer>
+			
+		</footer>
+
 	</div>
-	
+
+<!--Scripts Javascript-->
+<script type="text/javascript" src="Javascript/jquery-3.2.0.min.js"></script>
+<script type="text/javascript" src="Javascript/animPhoto.js"></script>
 </body>
