Preparing slider for socialNetwork links

--- a/index.html
+++ b/index.html
@@ -32,6 +32,37 @@
 			<img src="Images/Accueil.JPG" alt="Image d'accueil">
 		</div>
 
+
+		<!--Slider qui apparaitra au survol de ma photo-->
+		<div id="sliderReseaux">
+
+			<ul>
+				<li class="iconesReseaux" id="facebook">
+					<a href="https://www.facebook.com/florian.divrusa" title="Facebook" target="blanked">
+						<img src="Images/IconesReseaux/facebook.png" alt="Facebook">
+					</a>
+				</li>
+
+				<li class="iconesReseaux" id="twitter">
+					<a href="https://twitter.com/floriandv1996" title="Twitter" target="blanked">
+						<img src="Images/IconesReseaux/twitter.png" alt="Twitter">
+					</a>
+				</li>
+
+				<li class="iconesReseaux" id="github">
+					<a href="https://github.com/floDV1996" title="Github">
+						<img src="Images/IconesReseaux/github.png" alt="">
+					</a>
+				</li>
+
+				<li>
+					<a href="https://www.linkedin.com/in/florian-di-vrusa-2a7065115/" title="Linkedin">
+						<img src="Images/IconesReseaux/linkedin.png" alt="Linkedin">
+					</a>
+				</li>
+			</ul>
+
+		</div>
 		<!--le header contient la photo, le nom, le prénom
 		le texte de présentation ainsi que toutes les infos pratiques
 		(addresse, numéro, mail,...)-->
@@ -39,10 +70,7 @@
 	
 				<div id="presentation">
 
-					<div id="photo">
-						<img src="Images/DiVrusa.JPG" alt="Di Vrusa Florian" title="Di Vrusa Florian">
-						
-					</div>
+					<img id="florian" src="Images/DiVrusa.JPG" alt="Di Vrusa Florian" title="Di Vrusa Florian">
 
 					<div id="iconePresentation">
 						<img src="Images/IconesHeader/presentation.png" alt="présentation">
