Made some improvements in the html code

--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
 
 							<ul>
 								<li class="iconesReseaux" id="facebook">
-									<a href="https://www.facebook.com/florian.divrusa" title="Facebook" target="blanked">
+									<a href="https://www.facebook.com/florian.divrusa" title="Facebook" target="_blank">
 										<img src="Images/IconesReseaux/facebook.png" alt="Facebook">
 									</a>
 								</li>
 
 								<li class="iconesReseaux" id="twitter">
-									<a href="https://twitter.com/floriandv1996" title="Twitter" target="blanked">
+									<a href="https://twitter.com/floriandv1996" title="Twitter" target="_blank">
 										<img src="Images/IconesReseaux/twitter.png" alt="Twitter">
 									</a>
 								</li>
 
 								<li class="iconesReseaux" id="github">
-									<a href="https://github.com/floDV1996" title="Github" target="blanked">
+									<a href="https://github.com/floDV1996" title="Github" target="_blank">
 										<img src="Images/IconesReseaux/github.png" alt="">
 									</a>
 								</li>
 
 								<li>
-									<a href="https://www.linkedin.com/in/florian-di-vrusa-2a7065115/" title="Linkedin" target="blanked">
+									<a href="https://www.linkedin.com/in/florian-di-vrusa-2a7065115/" title="Linkedin" target="_blank">
 										<img src="Images/IconesReseaux/linkedin.png" alt="Linkedin">
 									</a>
 								</li>
@@ -190,19 +190,19 @@
 
 				<div class="etudesExp">
 					<h3>Bachelier en Informatique et systèmes orientation réseaux et télécommunications option développement</h3>
-					<h4>Haute école en Hainaut : <a href="https://www.heh.be/formation-4-8-Bachelier-en-Informatique-et-systemes-orientation-reseaux-et-telecommunications-option-developpement-ou-securite" title="Campus technique de la HEH" target="blanked">Campus technique</a></h4> 
+					<h4>Haute école en Hainaut : <a href="https://www.heh.be/formation-4-8-Bachelier-en-Informatique-et-systemes-orientation-reseaux-et-telecommunications-option-developpement-ou-securite" title="Campus technique de la HEH" target="_blank">Campus technique</a></h4> 
 					<span>SEPTEMBRE 2015 - JUIN 2018 (Supposé)</span>
 				</div>
 
 				<div class="etudesExp">
 					<h3>Master en Sciences Informatiques</h3>
-					<h4>Université de Mons : <a href="http://portail.umons.ac.be/FR/Pages/default.aspx" title="Umons, Faculté des sciences" target="blanked">Faculté des sciences</a></h4>
+					<h4>Université de Mons : <a href="http://portail.umons.ac.be/FR/universite/facultes/fs/Pages/default.aspx" title="Umons, Faculté des sciences" target="_blank">Faculté des sciences</a></h4>
 					<span>SEPTEMBRE 2014 - JUIN 2015</span> 			
 				</div>
 
 				<div class="etudesExp" id="cess">
 					<h3>CESS :  Option Sciences - Math</h3>
-					<h4>Enseignement général : <a href="http://www.isj-lalouviere.be/home" title="Institut Saint-Jospeh La Louvière. Enseignement général" target="blanked">Institut Saint-Joseph La Louvière</a></h4>
+					<h4>Enseignement général : <a href="http://www.isj-lalouviere.be/home" title="Institut Saint-Jospeh La Louvière. Enseignement général" target="_blank">Institut Saint-Joseph La Louvière</a></h4>
 					<span>SEPTEMBRE 2008 - JUIN 2014</span>
 				</div>
 
@@ -223,7 +223,7 @@
 				<img class="imagesPro" src="Images/IconesPro/Cora.png" alt="Cora" title="Shopping Cora">
 				<div id="cora" class="etudesExp">
 					<h3>Hôte de caisse, réassortiment rayons</h3>
-					<h4><a href="http://lalouviere.shoppingcora.be/" title="Shopping Cora La Louvière" target="blanked">Shopping Cora : La Louvière</a></h4>
+					<h4><a href="http://lalouviere.shoppingcora.be/" title="Shopping Cora La Louvière" target="_blank">Shopping Cora : La Louvière</a></h4>
 					<span>JUILLET 2016 - SEPTEMBRE 2016 | JUILLET 2017 - SEPTEMBRE 2017</span>	
 				</div>
 			</div>
