--- a/index.html
+++ b/index.html
@@ -26,12 +26,6 @@
 
 <body>
 
-	<div id="conteneur">
-
-		<div id="image">
-			<img src="Images/Accueil.JPG" alt="Image d'accueil">
-		</div>
-
 		<!--le header contient la photo, le nom, le prénom
 		le texte de présentation ainsi que toutes les infos pratiques
 		(addresse, numéro, mail,...)-->
@@ -49,25 +43,25 @@
 							<ul>
 								<li class="iconesReseaux" id="facebook">
 									<a href="https://www.facebook.com/florian.divrusa" title="Facebook" target="_blank">
-										<img src="Images/IconesReseaux/facebook.png" alt="Facebook">
+										<img src="Images/IconesReseauxSociaux/facebook.png" alt="Facebook">
 									</a>
 								</li>
 
 								<li class="iconesReseaux" id="twitter">
 									<a href="https://twitter.com/floriandv1996" title="Twitter" target="_blank">
-										<img src="Images/IconesReseaux/twitter.png" alt="Twitter">
+										<img src="Images/IconesReseauxSociaux/twitter.png" alt="Twitter">
 									</a>
 								</li>
 
 								<li class="iconesReseaux" id="github">
 									<a href="https://github.com/floDV1996" title="Github" target="_blank">
-										<img src="Images/IconesReseaux/github.png" alt="">
+										<img src="Images/IconesReseauxSociaux/github.png" alt="">
 									</a>
 								</li>
 
 								<li>
 									<a href="https://www.linkedin.com/in/florian-di-vrusa-2a7065115/" title="Linkedin" target="_blank">
-										<img src="Images/IconesReseaux/linkedin.png" alt="Linkedin">
+										<img src="Images/IconesReseauxSociaux/linkedin.png" alt="Linkedin">
 									</a>
 								</li>
 							</ul>
@@ -191,7 +185,7 @@
 				<div class="etudesExp">
 					<h3>Bachelier en Informatique et systèmes orientation réseaux et télécommunications option développement</h3>
 					<h4>Haute école en Hainaut : <a href="https://www.heh.be/formation-4-8-Bachelier-en-Informatique-et-systemes-orientation-reseaux-et-telecommunications-option-developpement-ou-securite" title="Campus technique de la HEH" target="_blank">Campus technique</a></h4> 
-					<span>SEPTEMBRE 2015 - JUIN 2018 (Supposé)</span>
+					<span>SEPTEMBRE 2015 - JUIN 2018</span>
 				</div>
 
 				<div class="etudesExp">
