Responsive for tablet

--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
 				<div id="cora" class="etudesExp">
 					<h3>Hôte de caisse, réassortiment rayons</h3>
 					<h4><a href="http://lalouviere.shoppingcora.be/" title="Shopping Cora La Louvière" target="_blank">Shopping Cora : La Louvière</a></h4>
+					<img id="imageCoraResponsive" src="Images/IconesPro/Cora.png" alt="Cora" title="Shopping Cora">
 					<span>JUILLET 2016 - SEPTEMBRE 2016 | JUILLET 2017 - SEPTEMBRE 2017</span>	
 				</div>
 			</div>
@@ -329,6 +330,15 @@
 					<div class="elements">
 						<h2>Voyagez en Russie</h2>
 						<p>HTML + CSS</p>
+						<div class="descriptionProjet">
+							<img src="" alt="">
+							<p></p>
+							<div class='liensProjets'>
+								<img src="" alt="">
+								<a href="" title=""></a>
+								
+							</div>
+						</div>
 					</div>
 
 					<div class="elements">
