Preparing flexBox for contain my projects

--- a/index.html
+++ b/index.html
@@ -327,41 +327,41 @@
 
 				<div id="projets">
 
-					<div class="elements">
+					<div class="elementsProjet" id="russie" onmouseenter="apparitionProjet(this)">
 						<h2>Voyagez en Russie</h2>
 						<p>HTML + CSS</p>
 						<div class="descriptionProjet">
-							<img src="" alt="">
-							<p></p>
+							<img src="Images/IconesProjets/russie.png" alt="Accueil du site">
+							<p>Site web réalisé durant ma première année à la HEH, il vous aidera à préparer votre voyage à travers la Russie</p>
 							<div class='liensProjets'>
-								<img src="" alt="">
-								<a href="" title=""></a>
+								<img src="Images/IconesReseauxSociaux/Github.png" alt="github" >
+								<a href="https://github.com/floDV1996/projetWebBac1" title="Lien Github" target="_blank">Github</a>
 								
 							</div>
 						</div>
 					</div>
 
-					<div class="elements">
+					<div class="elementsProjet">
 						<h2>Bibli-Aux-Films</h2>
 						<p>C# (WinForm)</p>
 					</div>
 
-					<div class="elements">
+					<div class="elementsProjet">
 						<h2>TFE (Bientôt disponible)</h2>
 						<p>Android</p>
 					</div>
 
-					<div class="elements">
+					<div class="elementsProjet">
 						<h2>Ball-Adventure</h2>
 						<p>Unity (C#)</p>
 					</div>
 
-					<div class="elements">
+					<div class="elementsProjet">
 						<h2>OnlineWallet</h2>
 						<p>HTML + CSS + Javascript + PHP</p>
 					</div>
 
-					<div class="elements">
+					<div class="elementsProjet">
 						<h2>OnePageCV</h2>
 						<p>HTML + CSS + Javascript</p>
 					</div>
@@ -375,4 +375,5 @@
 <!--Scripts Javascript-->
 <script type="text/javascript" src="Javascript/jquery-3.2.0.min.js"></script>
 <script type="text/javascript" src="Javascript/animations.js"></script>
+<script type="text/javascript" src="Javascript/flexibility.js"></script>
 </body>
