Add CV, animations securisation

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
 				<div id="projets">
 
-					<div class="elementsProjet" onmouseenter="apparition('russie')" onmouseleave="disparition('russie')">
+					<div class="elementsProjet">
 
 						<h2>Voyagez en Russie</h2>
 						<p>HTML + CSS</p>
@@ -346,7 +346,7 @@
 						</div>
 					</div>
 
-					<div class="elementsProjet" onmouseenter="apparition('bibliAuxFilms')" onmouseleave="disparition('bibliAuxFilms')">
+					<div class="elementsProjet" >
 
 						<h2>Bibli-Aux-Films</h2>
 						<p>C# (WinForm)</p>
@@ -374,7 +374,7 @@
 
 					</div>
 
-					<div class="elementsProjet" onmouseenter="apparition('ballAdventure')" onmouseleave="disparition('ballAdventure')">
+					<div class="elementsProjet" >
 
 						<h2>Ball-Adventure</h2>
 						<p>Unity (C#)</p>
@@ -395,7 +395,7 @@
 
 					</div>
 
-					<div class="elementsProjet" onmouseenter="apparition('onlineWallet')" onmouseleave="disparition('onlineWallet')">
+					<div class="elementsProjet">
 
 						<h2>OnlineWallet</h2>
 						<p>HTML + CSS + Javascript + PHP</p>
@@ -416,7 +416,7 @@
 
 					</div>
 
-					<div class="elementsProjet" onmouseenter="apparition('onePageCV')" onmouseleave="disparition('onePageCV')">
+					<div class="elementsProjet">
 
 						<h2>OnePageCV</h2>
 						<p>HTML + CSS + Javascript</p>
@@ -424,7 +424,7 @@
 						<div class="descriptionProjet" id="onePageCV">
 
 							<img src="Images/IconesProjets/onePageCV.png" alt="CV">
-							<p>Site web qui permet aux utilisateurs de garder un oeil sur leurs dépenses et leurs revenus au quotidien</p>
+							<p>Cv onePage réalisé dans le cadre du cours de développement front-end en BAC 2. Il me sert également de CV professionnel </p>
 
 							<div class='liensProjets'>
 
