--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 							<div class='liensProjets'>
 
 								<img src="Images/IconesReseauxSociaux/github.png" alt="github" >
-								<a href="https://github.com/floDV1996/OnlineWallet" title="Lien Github" target="_blank">Github</a>
+								<a href="https://github.com/floDV1996/OnePageCV" title="Lien Github" target="_blank">Github</a>
 								
 							</div>
 
