modify meta description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="CV onePage de Di Vrusa Florian">
+    <meta name="description" content="CV realized by Di Vrusa Florian">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Di Vrusa Florian, Florian, Di Vrusa, Florian CV, project Di Vrusa, CV Di Vrusa">
     <meta name="robots" content="index, follow">
