FadeIn for section while scrolling + CV download

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
 		<div id="cvBoutonHoverHeader">
-			<a href="" target="_blank" >Télécharger mon CV</a>
+			<a href="https://mega.nz/#!npgxUK7R!_RCOChAD0Vuwp0sBdW4iRfu8muETKXHO7Rwhm9xW69g" target="_blank" >Télécharger mon CV</a>
 		</div>
 
 			
@@ -138,7 +138,7 @@
 						</div>	
 
 						<div class="numero" id="numeroFixe">
-							<p>064/459587</p>
+							<p>0032 64/21.45.59</p>
 						</div>
 
 						<div class="logo">
@@ -146,7 +146,7 @@
 						</div>
 
 						<div class="numero" id="numeroGSM">
-							<p>0495/786584</p>
+							<p>0032 495/78.65.84</p>
 						</div>
 
 				</div>
@@ -223,7 +223,7 @@
 
 		<!--Je donnerais la possibilité à l'utilisateur de télécharger mon CV et je note ce que je recherche-->
 			<div id="cvBouton">
-				<a href="" target="_blank" >Télécharger mon CV</a>
+				<a href="https://mega.nz/#!npgxUK7R!_RCOChAD0Vuwp0sBdW4iRfu8muETKXHO7Rwhm9xW69g" target="_blank" >Télécharger mon CV</a>
 			</div>
 
 		<!--La seconde section affichera des informations sur mes études actuelles et passées ainsi que le moyen de se renseigner sur les établissements-->
