Made some improvement

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
 
-		<!--Le "hoverHeader va me permettre d'afficher ces éléments au dessus du header sur mobile et tablettes, il sera non visible pour les grands"-->
+		<!--Le "hoverHeader" va me permettre de savoir que je dois afficher ces éléments au dessus du header sur mobile et tablettes, il sera non visible pour les grandes résolutions"-->
 		<div id="florianHoverHeader">
 			<img src="Images/DiVrusa.jpg" alt="Di Vrusa Florian" title="Di Vrusa Florian">
 		</div>
@@ -72,7 +72,7 @@
 
 
 		<div id="cvBoutonHoverHeader">
-			<a href="https://mega.nz/#!b8R2WZLY!DzPaA85oyNaxU6NHh9LKfpIvIGEUn7XoWH8EVkvPSgM" target="_blank" >Télécharger mon CV</a>
+			<a href="https://mega.nz/#!WwJRkAwK!nr9jjL8xydsRUPZ-4QfJZ0PXItFBjGNg6vHmurxazv0" target="_blank" >Télécharger mon CV</a>
 		</div>
 
 			
@@ -224,7 +224,7 @@
 
 		<!--Je donnerais la possibilité à l'utilisateur de télécharger mon CV et je note ce que je recherche-->
 			<div id="cvBouton">
-				<a href="https://mega.nz/#!b8R2WZLY!DzPaA85oyNaxU6NHh9LKfpIvIGEUn7XoWH8EVkvPSgM" target="_blank" >Télécharger mon CV</a>
+				<a href="https://mega.nz/#!WwJRkAwK!nr9jjL8xydsRUPZ-4QfJZ0PXItFBjGNg6vHmurxazv0" target="_blank" >Télécharger mon CV</a>
 			</div>
 
 		<!--La seconde section affichera des informations sur mes études actuelles et passées ainsi que le moyen de se renseigner sur les établissements-->
