Made some changes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 			<div id="nomPrenomHoverHeader">
 				<h1>Di Vrusa Florian</h1>
-				<h5>Étudiant en informatique et télécommunications</h5>
+				<h5>Étudiant en informatique et systèmes</h5>
 				<h5>Développeur / Programmeur</h5>
 			</div>
 
@@ -216,7 +216,7 @@
 
 			<div id="nomPrenom">
 				<h1>Di Vrusa Florian</h1>
-				<h5>Étudiant en informatique et télécommunications</h5>
+				<h5>Étudiant en informatique et systèmes</h5>
 				<h5>Développeur / Programmeur</h5>
 			</div>
 
