Improving informations presentation

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<div class="info">
 
 						<div class="logo">
-							<img src="Images/IconesHeader/telephoneFixe.png" alt="téléphonne fixe">
+							<img id="telFixe" src="Images/IconesHeader/telephoneFixe.png" alt="téléphonne fixe">
 						</div>	
 
 						<div class="numero" id="numeroFixe">
