Split project in two column under 1366px

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 				</div>
 
 				<div class="etudesExp">
-					<h3>Master en Sciences Informatiques</h3>
+					<h3>Master en Sciences Informatiques (1ère Bac)</h3>
 					<h4>Université de Mons : <a href="http://portail.umons.ac.be/FR/universite/facultes/fs/Pages/default.aspx" title="Umons, Faculté des sciences" target="_blank">Faculté des sciences</a></h4>
 					<span>SEPTEMBRE 2014 - JUIN 2015</span> 			
 				</div>
