--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
 
 <body>
 
-		<div id="choixLangues">
-			<a href="indexEn.html" title="">EN</a>
-			<a href="index.html" title="">FR</a>
-		</div>
 
 		<!--Le "hoverHeader" va me permettre de savoir que je dois afficher ces éléments au dessus du header sur mobile et tablettes, il sera non visible pour les grandes résolutions"-->
 		<div id="florianHoverHeader">
@@ -79,6 +75,11 @@
 
 		<div id="cvBoutonHoverHeader">
 			<a href="CV/CV-fr.pdf" target="_blank" >Télécharger mon CV</a>
+		</div>
+
+		<div id="choixLangues">
+			<a href="indexEn.html" title="">EN</a>
+			<a href="index.html" title="">FR</a>
 		</div>
 
 			
@@ -387,7 +388,7 @@
 
 					</div>
 
-					<div class="elementsProjet">
+					<div id="TFE" class="elementsProjet">
 
 						<h2>TFE (Bientôt disponible)</h2>
 						<p>Android</p>
