--- a/indexEn.html
+++ b/indexEn.html
@@ -352,7 +352,7 @@
 
 					<div class="elementsProjet">
 
-						<h2>Travel to Russia (FR)</h2>
+						<h2>Voyagez en Russie (FR)</h2>
 						<p>HTML + CSS</p>
 
 						<div class="descriptionProjet" id="russie">
