--- a/indexEn.html
+++ b/indexEn.html
@@ -225,7 +225,7 @@
 
 		<!--Je donnerais la possibilité à l'utilisateur de télécharger mon CV-->
 			<div id="cvBouton">
-				<a href="CV/CV-fr.pdf" target="_blank" >Download my CV</a>
+				<a href="CV/CV-En.pdf" target="_blank" >Download my CV</a>
 			</div>
 
 		<!--La seconde section me présentera brièvement-->
@@ -235,7 +235,7 @@
 
 			<div class="contenuSections">
 
-				<h2 class="titreSections">Do you need the perfect Programmer/Developper ?</h2>
+				<h2 class="titreSections">Do you need a Developper/Programmer ?</h2>
 
 				<div id="textePresentation">
 					<p>Passionate about technology since my childhood, I always wanted to orient myself in this environment. Having always wanted to leave my own mark in the world of technology, I have oriented myself in studies of development in computer sciences in order to be able to bring my personal touch 
@@ -389,7 +389,7 @@
 
 					</div>
 
-					<div class="elementsProjet">
+					<div id="TFE" class="elementsProjet">
 
 						<h2>TFE (Coming soon)</h2>
 						<p>Android</p>
@@ -425,7 +425,7 @@
 						<div class="descriptionProjet" id="onlineWallet">
 
 							<img src="Images/IconesProjets/wallet.png" alt="Accueil du site">
-							<p>Site web qui permet aux utilisateurs de garder un oeil sur leurs dépenses et leurs revenus au quotidien</p>
+							<p>Website that provides users a way to manage their banking account and their spending</p>
 
 							<div class='liensProjets'>
 
@@ -446,7 +446,7 @@
 						<div class="descriptionProjet" id="onePageCV">
 
 							<img src="Images/IconesProjets/onePageCV.png" alt="CV">
-							<p>Cv onePage réalisé dans le cadre du cours de développement front-end en BAC 2. Il me sert également de CV professionnel </p>
+							<p>OnePage Cv realized during the Front-End development course. I use it as a professional CV</p>
 
 							<div class='liensProjets'>
 
