Add English CV PDF

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 				</div>
 
 				<div class="etudesExp">
-					<h3>Master en Sciences Informatiques (1ère Bac)</h3>
+					<h3>Master en Sciences Informatiques (1ère Bachelier)</h3>
 					<h4>Université de Mons : <a href="http://portail.umons.ac.be/FR/universite/facultes/fs/Pages/default.aspx" title="Umons, Faculté des sciences" target="_blank">Faculté des sciences</a></h4>
 					<span>SEPTEMBRE 2014 - JUIN 2015</span> 			
 				</div>
@@ -351,7 +351,7 @@
 
 					<div class="elementsProjet">
 
-						<h2>Voyagez en Russie</h2>
+						<h2>Voyagez en Russie (FR)</h2>
 						<p>HTML + CSS</p>
 
 						<div class="descriptionProjet" id="russie">
@@ -369,7 +369,7 @@
 
 					<div class="elementsProjet" >
 
-						<h2>Bibli-Aux-Films</h2>
+						<h2>Bibli-Aux-Films (FR)</h2>
 						<p>C# (WinForm)</p>
 
 						<div class="descriptionProjet" id="bibliAuxFilms">
@@ -397,7 +397,7 @@
 
 					<div class="elementsProjet" >
 
-						<h2>Ball-Adventure</h2>
+						<h2>Ball-Adventure (EN)</h2>
 						<p>Unity (C#)</p>
 
 						<div class="descriptionProjet" id="ballAdventure">
@@ -418,7 +418,7 @@
 
 					<div class="elementsProjet">
 
-						<h2>OnlineWallet</h2>
+						<h2>OnlineWallet (EN)</h2>
 						<p>HTML + CSS + Javascript + PHP</p>
 
 						<div class="descriptionProjet" id="onlineWallet">
@@ -439,7 +439,7 @@
 
 					<div class="elementsProjet">
 
-						<h2>OnePageCV</h2>
+						<h2>OnePageCV (FR, EN)</h2>
 						<p>HTML + CSS + Javascript</p>
 
 						<div class="descriptionProjet" id="onePageCV">
