--- a/indexEn.html
+++ b/indexEn.html
@@ -157,7 +157,7 @@
 					</div>
 
 					<div id="texteAdresse">
-						<p>17 Cesar street<br>
+						<p>17 César street<br>
 						7170 Manage <br>
 						Hainaut, Belgium
 						</p>
@@ -235,7 +235,7 @@
 
 			<div class="contenuSections">
 
-				<h2 class="titreSections">Do you need a Developper/Programmer ?</h2>
+				<h2 class="titreSections">Do you need a Developper / Programmer ?</h2>
 
 				<div id="textePresentation">
 					<p>Passionate about technology since my childhood, I always wanted to orient myself in this environment. Having always wanted to leave my own mark in the world of technology, I have oriented myself in studies of development in computer sciences in order to be able to bring my personal touch 
